# tofu

./: .gitignore  .readthedocs.yml  Dockerfile  MANIFEST.in  README.md  dev-requirements.txt  estimate-center.py  install-manifest  make-sinos.py  pkgconfig.py  pyproject.toml  reconstruct-from-sinos.py  recos  requirements-flow.txt  requirements-ufo.txt  setup.py  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: tests.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  refs.bib  usage.rst
docs/source/_static/css/: custom.css
docs/source/api/: genreco.rst  inpaint.rst  preprocessing.rst  util.rst
docs/source/usage/: filter-visualization.rst  flow.rst  genreco.rst  io.rst  postprocessing.rst  preprocessing.rst  tune.rst
tofu/: __init__.py  compress.py  config.py  denoise.py  filter_visualization.py  find_large_spots.py  flatcorrect.py  genreco.py  gui.py  gui.ui  inpaint.py  lamino.py  metrics.py  preprocess.py  reco.py  rgbareco.py  sinos.py  tasks.py  tune.py  util.py
tofu/ez/: RR_external.py  RR_simple.py  ctdir_walker.py  evaluate_sharpness.py  find_axis_cmd_gen.py  image_read_write.py  main.py  main_half_acq_mode.py  main_nlm.py  params.py  tofu_cmd_gen.py  ufo_cmd_gen.py  util.py  yaml_in_out.py
tofu/ez/GUI/: Preprocessing_tab.py  batch_process.py  binning.py  centre_of_rotation.py  config.py  default_settings.yaml  ezufo_launcher.py  filters.py  image_read_write.py  image_viewer.py  login_dialog.py  message_dialog.py  params.py  phase_retrieval.py  test_settings.yaml  verify_delete.py  yaml_in_out.py
tofu/ez/GUI/Advanced/: Batch360.py  advanced.py  ffc.py  find_large_spots.py  nlmdn.py  optimization.py
tofu/ez/GUI/Helpers/: ez_360_multi_stitch_qt.py  ez_360_multi_stitch_qt_original.py  ez_360_overlap_qt.py  ezmview_qt.py  ezstitch_qt.py
tofu/ez/GUI/Main/: batch_process.py  centre_of_rotation.py  config.py  filters.py  phase_retrieval.py  (+1 more)
tofu/ez/Helpers/: batch_search_stitch_360.py  find_360_overlap.py  halfacqmode-mpi-stitch.py  halfacqmode_mpi_stitch.py  helper_util.py  hereon_h5.py  mview_main.py  stitch_funcs.py
tofu/flow/: config.json  execution.py  filedirdialog.py  main.py  models.py  propertylinksmodels.py  propertylinkswidget.py  runslider.py  scene.py  util.py  viewer.py
tofu/flow/composites/: ffc-links.cm  pr.cm
tofu/static/js/: dat.gui.helper.js  ejs.min.js  volumeRaycaster.min.js
tofu/templates/: create.html  import.html  index.html  layout.html  render.html
tofu/tests/: conftest.py  flow_util.py  test_flow_execution.py  test_flow_main.py  test_flow_models.py  test_flow_propertylinksmodels.py  test_flow_propertylinkswidget.py  test_flow_runslider.py  test_flow_scene.py  test_flow_util.py  test_flow_viewer.py  test_jpeg2000_threads.py  test_reconstruction_postprocessing.py  test_tune.py  ufo.py
tofu/tests/composites/: cmp.cm  cmp_2.cm
tofu/vis/: qt.py  web.py
unfoog/: config.py  flatcorrect.py  gui.py  gui.ui  reco.py  sinos.py  util.py
(+8 files in other folders)
